# gift-sniper-2

./: .gitignore  Cargo.toml
.cargo/: config.toml
migrations/: 20250811173018_initial.down.sql  20250811173018_initial.up.sql  20250813171312_peers.down.sql  20250813171312_peers.up.sql
src/: bot.rs  core.rs  db.rs  main.rs  wrapped_client.rs
src/cli/: buy_gifts.rs  login.rs  mod.rs  start.rs
