[package]
name = "gift-sniper-grammers"
version = "0.1.0"
edition = "2024"

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers.git", rev = "0baff7d" }
anyhow = "1.0.98"
dialoguer = "0.11.0"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rlottie = "0.5.2"
flate2 = "1.1.2"
image = "0.25.6"
tch = "0.20.0"
